<resources>
    <string name="app_name">Steam Scraper</string>

    <!-- BUTTONS -->
    <string name="add_a_game_fab">Add a game</string>
    <string name="add_game_fab">Add game</string>
    <string name="back_menu_button">back</string>
    <string name="forth_menu_button">forth</string>
    <string name="refresh_menu_button">refresh</string>

    <!-- TEXTVIEWS -->
    <string name="game_name">Game Name</string>
    <string name="price_discount">Price discount</string>
    <string name="discount">Discount</string>
    <string name="date">Date</string>
    <string name="price_original">Price Original</string>

</resources>