<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_btn_back"
        android:icon="@drawable/ic_arrow_left"
        android:iconTint="@color/white"
        android:title="@string/back_menu_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_btn_forth"
        android:icon="@drawable/ic_arrow_right"
        android:iconTint="@color/white"
        android:title="@string/forth_menu_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_btn_refresh"
        android:icon="@drawable/ic_refresh"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:title="@string/refresh_menu_button" />
</menu>